modified:   config.xml 	deleted:    node_modules/cordova-plugin-whitelist/CONTRIBUTING.md 	deleted:    node_modules/cordova-plugin-whitelist/LICENSE 	deleted:    node_modules/cordova-plugin-whitelist/NOTICE 	deleted:    node_modules/cordova-plugin-whitelist/README.md 	deleted:    node_modules/cordova-plugin-whitelist/RELEASENOTES.md 	deleted:    node_modules/cordova-plugin-whitelist/doc/de/README.md 	deleted:    node_modules/cordova-plugin-whitelist/doc/es/README.md 	deleted:    node_modules/cordova-plugin-whitelist/doc/fr/README.md 	deleted:    node_modules/cordova-plugin-whitelist/doc/it/README.md 	deleted:    node_modules/cordova-plugin-whitelist/doc/ja/README.md 	deleted:    node_modules/cordova-plugin-whitelist/doc/ko/README.md 	deleted:    node_modules/cordova-plugin-whitelist/doc/pl/README.md 	deleted:    node_modules/cordova-plugin-whitelist/doc/zh/README.md 	deleted:    node_modules/cordova-plugin-whitelist/package.json 	deleted:    node_modules/cordova-plugin-whitelist/plugin.xml 	deleted:    node_modules/cordova-plugin-whitelist/src/android/WhitelistPlugin.java 	deleted:    node_modules/cordova-plugin-whitelist/src/ios/CDVNavigationWhitelistPlugin.h 	deleted:    node_modules/cordova-plugin-whitelist/src/ios/CDVNavigationWhitelistPlugin.m 	deleted:    node_modules/cordova-plugin-whitelist/whitelist.js 	modified:   package-lock.json 	modified:   package.json 	modified:   platforms/android/android.json 	deleted:    platforms/android/app/src/main/java/org/apache/cordova/whitelist/WhitelistPlugin.java 	modified:   platforms/android/app/src/main/res/xml/config.xml 	modified:   platforms/browser/browser.json 	modified:   platforms/browser/platform_www/cordova_plugins.js 	modified:   platforms/browser/www/cordova_plugins.js 	modified:   platforms/browser/www/css/index.css 	modified:   platforms/browser/www/index.html 	modified:   platforms/browser/www/js/index.js 	modified:   platforms/ios/ios.json 	modified:   platforms/ios/mtr_demo.xcodeproj/project.pbxproj 	de

--- a/platforms/browser/www/css/index.css
+++ b/platforms/browser/www/css/index.css
@@ -27,8 +27,9 @@
 }
 
 
-.warning0 {
-    width:30%;
+.warningN {
+    
+    width:50%;
     
 /*    display: block;*/
     margin-left: auto;
@@ -48,7 +49,7 @@
     animation-duration:0.5s;
     animation-iteration-count: infinite;
     
-    width:30%;
+    width:50%;
     
 /*    display: block;*/
     margin-left: auto;
@@ -60,6 +61,11 @@
     margin:auto;
     width:50%;
     padding:3px;
+}
+
+.centerTable{
+margin:0px auto;
+font-size:10px;
 }
 
 .contentA {
